# mate-note

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  mate-doc-utils.make
data/: MATE_MnoteApplet.server.in.in  Makefile.am  Makefile.in  mnote.1  mnote.desktop.in.in  mnote.schemas.in  org.mate.Mnote.service  org.mate.Mnote.service.in
data/icons/: Makefile.am  Makefile.in
debian/: changelog  control  copyright  docs  rules  watch
help/: Makefile.am  Makefile.in
help/C/: mnote.xml
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/sl/: sl.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
libtomboy/: Makefile.in
po/: POTFILES.in  POTFILES.skip  ar.po  as.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  ml.po  mr.po  nb.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  ta.po  te.po  (+3 more)
src/: Makefile.am  Makefile.in  abstractaddin.cpp  abstractaddin.hpp  actionmanager.cpp  actionmanager.hpp  addinmanager.cpp  addinmanager.hpp  addinpreferencefactory.cpp  addinpreferencefactory.hpp  applet.cpp  applet.hpp  applicationaddin.cpp  applicationaddin.hpp  debug.cpp  debug.hpp  importaddin.cpp  importaddin.hpp  keybinder.hpp  main.cpp  mnote-applet.in  mnote.cpp  mnote.hpp  note.cpp  note.hpp  noteaddin.cpp  noteaddin.hpp  notebuffer.cpp  notebuffer.hpp  noteeditor.cpp  noteeditor.hpp  notemanager.cpp  notemanager.hpp  noterenamedialog.cpp  noterenamedialog.hpp  notetag.cpp  notetag.hpp  notewindow.cpp  notewindow.hpp  preferences.cpp  (+29 more)
src/addins/: Makefile.in
src/base/: inifile.cpp  inifile.hpp  macros.hpp
src/dbus/: Makefile.am  Makefile.in  iremotecontrol.hpp  mnote-introspect.xml  remotecontrol.cpp  remotecontrol.hpp  remotecontrolclient.cpp  remotecontrolclient.hpp
src/notebooks/: createnotebookdialog.cpp  createnotebookdialog.hpp  notebook.cpp  notebook.hpp  notebookapplicationaddin.cpp  notebookmanager.cpp  (+10 more)
(+108 files in other folders)
